--- a/test.css
+++ b/test.css
@@ -41,7 +41,7 @@ hr{
     gap: 25px;
     font-weight: 700;
     margin: 7px;
-    /* margin-left: 60px; */
+    margin-left: 60px;
     font-size: 13px;
 
 }
